updated the package.json url address

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://gitname.github.io/react-gh-pages",
+	"homepage": "http://gitname.github.io/portfolio",
 	"name": "portfolio",
 	"version": "0.1.0",
 	"private": true,
@@ -27,11 +27,7 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
