--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://gitname.github.io/aboutme",
+	"homepage": "https://rogercerpa.github.io/portfolio",
 	"name": "portfolio",
 	"version": "0.1.0",
 	"private": true,
