--- a/package.json
+++ b/package.json
@@ -1,45 +1,27 @@
 {
-	"homepage": "https://rogercerpa.github.io/portfolio",
-	"name": "portfolio",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@material-ui/core": "^4.9.12",
-		"@material-ui/icons": "^4.9.1",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
-		"bootstrap": "^4.5.0",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.4.1",
-		"reactstrap": "^8.4.1"
-	},
+	"name": "mern",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
 	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+		"start:prod": "node server.js",
+		"start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+		"client": "cd client && npm run start",
+		"install": "cd client && npm install",
+		"build": "cd client && npm run build",
+		"heroku-postbuild": "npm run build",
+		"seed": "node scripts/seedDB.js"
 	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
+	"author": "",
+	"license": "ISC",
 	"devDependencies": {
-		"gh-pages": "^2.2.0"
+		"concurrently": "^4.1.0",
+		"nodemon": "^1.18.7"
+	},
+	"dependencies": {
+		"express": "^4.16.3",
+		"if-env": "^1.0.4",
+		"mongoose": "^5.8.11"
 	}
 }
