--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 	"dependencies": {
 		"express": "^4.16.3",
 		"if-env": "^1.0.4",
-		"mongoose": "^5.8.11"
+		"mongoose": "^5.8.11",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-router-dom": "^5.1.2"
 	}
 }
