--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-	"name": "portfolio",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
-	"scripts": {
-		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-		"start:prod": "node server.js",
-		"start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-		"client": "cd client && npm run start",
-		"install": "cd client && npm install",
-		"build": "cd client && npm run build",
-		"heroku-postbuild": "npm run build",
-		"seed": "node scripts/seedDB.js"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"concurrently": "^4.1.0",
-		"nodemon": "^1.18.7"
-	},
-	"dependencies": {
-		"express": "^4.16.3",
-		"if-env": "^1.0.4",
-		"mongoose": "^5.8.11",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-router-dom": "^5.1.2"
-	}
+  "name": "portfolio",
+  "version": "1.0.0",
+  "description": "Discover Roger Cerpa Creativity through his Code.",
+  "main": "server.js",
+  "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build",
+    "seed": "node scripts/seedDB.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.8.11",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rogercerpa/portfolio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rogercerpa/portfolio/issues"
+  },
+  "homepage": "https://github.com/rogercerpa/portfolio#readme"
 }
